--- a/Gui-Vln-2016/mainwindow.ui
+++ b/Gui-Vln-2016/mainwindow.ui
@@ -32,7 +32,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tabScientist">
        <attribute name="title">
@@ -262,15 +262,30 @@
          <widget class="QComboBox" name="comboBoxConnection"/>
         </item>
         <item>
-         <widget class="QTableWidget" name="tableWidget_3">
+         <widget class="QTableWidget" name="tableWidgetConnection">
           <column>
            <property name="text">
-            <string>ScientistID</string>
+            <string>First Name</string>
            </property>
           </column>
           <column>
            <property name="text">
-            <string>ComputerID</string>
+            <string>Last Name</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>N.O.C</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>T.O.C</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Y.O.C</string>
            </property>
           </column>
          </widget>
@@ -308,7 +323,7 @@
      <x>0</x>
      <y>0</y>
      <width>465</width>
-     <height>26</height>
+     <height>17</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
