--- a/Gui-Vln-2016/editscientist.ui
+++ b/Gui-Vln-2016/editscientist.ui
@@ -23,17 +23,17 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="pushButtonUpdate">
    <property name="geometry">
     <rect>
      <x>140</x>
      <y>210</y>
-     <width>71</width>
+     <width>121</width>
      <height>111</height>
     </rect>
    </property>
    <property name="text">
-    <string>Ok</string>
+    <string>Update</string>
    </property>
   </widget>
   <widget class="QLabel" name="AddScientistlabel">
@@ -54,16 +54,6 @@
     <rect>
      <x>20</x>
      <y>100</y>
-     <width>181</width>
-     <height>21</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="lineEditGender">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>140</y>
      <width>181</width>
      <height>21</height>
     </rect>
@@ -200,17 +190,14 @@
     </rect>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QComboBox" name="genderSelectBox">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>211</y>
-     <width>113</width>
-     <height>111</height>
+     <x>20</x>
+     <y>130</y>
+     <width>181</width>
+     <height>26</height>
     </rect>
-   </property>
-   <property name="text">
-    <string>PushButton</string>
    </property>
   </widget>
  </widget>
