föll fyrir ascendin og descending

--- a/Gui-Vln-2016/mainwindow.ui
+++ b/Gui-Vln-2016/mainwindow.ui
@@ -50,7 +50,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tabScientist">
        <attribute name="title">
@@ -99,25 +99,60 @@
            <property name="text">
             <string>ID</string>
            </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>First name</string>
+           </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
            </property>
           </column>
           <column>
            <property name="text">
             <string>Last name</string>
            </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>Gender</string>
            </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>Nationality</string>
+           </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
            </property>
           </column>
           <column>
@@ -341,7 +376,7 @@
      <x>0</x>
      <y>0</y>
      <width>1057</width>
-     <height>26</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
