--- a/Gui-Vln-2016/mainwindow.ui
+++ b/Gui-Vln-2016/mainwindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1057</width>
-    <height>706</height>
+    <width>426</width>
+    <height>631</height>
    </rect>
   </property>
   <property name="baseSize">
@@ -84,6 +84,33 @@
            <widget class="QPushButton" name="pushButton">
             <property name="text">
              <string>Display</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>10</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButtonAscending">
+            <property name="text">
+             <string>Ascending</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="radioButtonDescending">
+            <property name="text">
+             <string>Descending</string>
             </property>
            </widget>
           </item>
@@ -357,8 +384,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1057</width>
-     <height>26</height>
+     <width>426</width>
+     <height>17</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
