--- a/Gui-Vln-2016/mainwindow.ui
+++ b/Gui-Vln-2016/mainwindow.ui
@@ -139,8 +139,8 @@
            </property>
            <property name="background">
             <color>
-             <red>0</red>
-             <green>128</green>
+             <red>102</red>
+             <green>204</green>
              <blue>255</blue>
             </color>
            </property>
@@ -151,8 +151,8 @@
            </property>
            <property name="background">
             <color>
-             <red>0</red>
-             <green>128</green>
+             <red>102</red>
+             <green>204</green>
              <blue>255</blue>
             </color>
            </property>
@@ -163,8 +163,8 @@
            </property>
            <property name="background">
             <color>
-             <red>0</red>
-             <green>128</green>
+             <red>102</red>
+             <green>204</green>
              <blue>255</blue>
             </color>
            </property>
@@ -175,8 +175,8 @@
            </property>
            <property name="background">
             <color>
-             <red>0</red>
-             <green>128</green>
+             <red>102</red>
+             <green>204</green>
              <blue>255</blue>
             </color>
            </property>
@@ -187,8 +187,8 @@
            </property>
            <property name="background">
             <color>
-             <red>0</red>
-             <green>128</green>
+             <red>102</red>
+             <green>204</green>
              <blue>255</blue>
             </color>
            </property>
@@ -197,15 +197,36 @@
            <property name="text">
             <string>Y.O.B.</string>
            </property>
+           <property name="background">
+            <color>
+             <red>102</red>
+             <green>204</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>Y.O.D.</string>
            </property>
+           <property name="background">
+            <color>
+             <red>102</red>
+             <green>204</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>Y.O.A.</string>
+           </property>
+           <property name="background">
+            <color>
+             <red>102</red>
+             <green>204</green>
+             <blue>255</blue>
+            </color>
            </property>
           </column>
          </widget>
@@ -290,25 +311,60 @@
            <property name="text">
             <string>ID</string>
            </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>255</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>Name</string>
+           </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>255</green>
+             <blue>255</blue>
+            </color>
            </property>
           </column>
           <column>
            <property name="text">
             <string>Type</string>
            </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>255</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>Year of build</string>
            </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>255</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>Was built?</string>
+           </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>255</green>
+             <blue>255</blue>
+            </color>
            </property>
           </column>
          </widget>
@@ -364,25 +420,60 @@
            <property name="text">
             <string>First Name</string>
            </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>Last Name</string>
+           </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
            </property>
           </column>
           <column>
            <property name="text">
             <string>N.O.C</string>
            </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>T.O.C</string>
            </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
+           </property>
           </column>
           <column>
            <property name="text">
             <string>Y.O.C</string>
+           </property>
+           <property name="background">
+            <color>
+             <red>0</red>
+             <green>128</green>
+             <blue>255</blue>
+            </color>
            </property>
           </column>
          </widget>
